<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flist"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends_list" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_leader"
            android:icon="@drawable/ic_leaderboards"
            android:title="@string/leaderboards" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

</menu>
